--- a/VriendApp/app/src/main/res/values/strings.xml
+++ b/VriendApp/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Vriend</string>
     <string name="email_id">Email Id</string>
     <string name="dont_have_an_account"><u>Do not have an account? SignUp here.</u></string>
+    <string name="title_activity_maps">MapsActivity</string>
 </resources>
